# httpie

./: Cargo.toml  README.md
src/: main.rs
src/cli/: parser.rs  types.rs
src/utils/: http.rs  mod.rs  printer.rs
